src/app/app.component.less
  main {
    width: 100%;
    min-height: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    // padding: 1rem;
    box-sizing: inherit;
    // position: relative;
    background-color: lightgrey;
   }

  // Main content styling
  .content {
    display: flex;
    justify-content: center;
    width: 100%;
    // margin-top: 10rem;
    // padding: 5rem;
  }

  .content h1 {
    margin-top: 1.75rem;
  }

  .content p {
    margin-top: 1.5rem;
  }

  // @media screen and (max-width: 650px) {
  //   .content {
  //     flex-direction: column;
  //     width: max-content;
  //   }

  //   // .divider {
  //   //   height: 1px;
  //   //   width: 100%;
  //   //   background: var(--red-to-pink-to-purple-horizontal-gradient);
  //   //   margin-block: 1.5rem;
  //   // }
  // }

  .container {
    display:flex;
    // justify-content: space-between;
    align-items: stretch;
    gap: 2rem;
    padding: 1rem;
    // height: 100%;
  }

  .left-align{
    display: flex; 
    flex-direction: column;
    justify-content: space-between;
    gap: .5rem;

  }
  
  .component {
    background-color: #f0f0f0;
    border: 1px solid #ccc;
    border-radius: 5px;
    // padding: 1rem;
  }
  
  .user-info-component, .running-stats-component {
    height: 100%;
    width: 100%;
    background-color: #f5f5f5;
    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
  }

  .goals-component {
    flex-grow: 1;
    margin: 0;
  }


  .location-cards {
    max-height: 800px;
    overflow-x: auto;
  }

  app-address-card {
    display: block;
    margin: 5px;
  }

  .align-right {
    text-align: right;
    margin-bottom: 5px;
  }

  .goals-tabs {
    border: 1px solid rgba(0, 0, 0, 0.1);
    background-color: #f5f5f5; 
    border-radius: 8px; 
    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
    min-height: 500px;
    max-height: 500px;
    overflow-y: auto; 
    padding: 16px;
  }

  .goal-div {
   background-color: green;
   margin: 2%;
   border-radius: 25px;
  }
  
  .goal-info { 
    display: flex;
    justify-content: space-between; 
    align-items: center; 
  }
  
  mat-progress-bar {
    margin-top: 5px;
  }

  .delete-button {
    color: #f44336; /* Red color for delete */
    transition: transform 0.2s ease-in-out;
  }

  .delete-button:hover {
    color: #d32f2f; /* Darker red on hover */
    transform: scale(1.1); /* Slightly increase size on hover */
  }

  .delete-button:focus {
    outline: none; /* Remove focus outline */
  }
  
  .completed {
    text-align: center;
    font-size: large;
    font-weight: bold;
    color:white; 
    cursor: pointer;
  }

  .no-goals {
    text-align: center;
  }

/* Initial form screen stylings */

  .opening-form-card {
    width: 100%;
    margin: 0 auto;
    padding: 20px;
    border-radius: 10px;
    background-color: #f5f5f5; 
    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
  }

  .opening-form-card mat-card-content {
    display: flex;
    flex-direction: column;
    gap: 20px;
  }

  .opening-form-card div {
    font-size: 16px;
    color: #333; 
  }

  .opening-form-card input {
    padding: 10px;
    border: 1px solid #ccc; 
    border-radius: 5px;
    font-size: 14px;
    width: 100%;
    box-sizing: border-box; 
  }

  .opening-form-card button {
    padding: 10px 15px;
    background-color: #3f51b5;
    color: white;
    font-size: 16px;
    border: none;
    border-radius: 5px;
    cursor: pointer;
    transition: background-color 0.3s ease;
  }

  .opening-form-card button:hover {
    background-color: #303f9f; 
  }

  .opening-form-card button[disabled] {
    background-color: #ccc; 
    cursor: not-allowed;
  }

  .form-container {
    display: flex;
  }

  .input-group {
    display: flex;
    flex-direction: column;
  }

  .button-container {
    margin-top: 20px;
    text-align: center;
  }

  .no-results-found {
    color: red; 
    font-size: 14px;
  }
  
  .scroll-container {
    max-height: 400px; 
    overflow-y: auto; 
    padding: 10px;
    border: 1px solid #ccc;
    border-radius: 5px;
    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1); 
  }

  .scrollable-card {
    margin-bottom: 10px; 
    transition: all 0.3s ease-in-out;
  }

  .scrollable-card:hover {
    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2); 
    transform: translateY(-4px);    
  }
  
  .app-address-card {
    margin-top: 10px;
    border: 1px solid #ddd;
    /* border-radius: 5px; */
    padding: 10px;
    cursor: pointer;
    transition: background-color 0.3s ease;
  }

  .app-address-card:hover {
    background-color: #e0e0e0; 
  }

  .highlight {
    border: 10px solid #4caf50; 
    background-color: #f1f8e9; 
    border-radius: 5px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
    transition: all 0.3s ease-in-out 
  }

  .highlight:hover {
    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);     
  }

  .button-container {
    display: flex;
    justify-content: center;
    width: 200px;
    margin: 10px 20px;
  }

